tests/js_error/source_locations/expression/super_call/basic.exp
Error: 
  ┌ source_locations/expression/super_call/basic.js:3:11
  |
3 |     throw new Error();
  |           ^
Stack trace:
  at A (source_locations/expression/super_call/basic.js:3:11)
  at B (source_locations/expression/super_call/basic.js:9:5)
  at <global> (source_locations/expression/super_call/basic.js:13:1)