tests/js_error/source_locations/expression/super_call/basic.js
class A {
  constructor() {
    throw new Error();
  }
}

class B extends A {
  constructor() {
    super();
  }
}

new B();